--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "http": "0.0.0",
     "rethinkdb": "^2.0.2",
     "rethinkdbdash": "^2.0.16"
+  },
+  "dependencies": {
+    "es6-promise": "^2.3.0"
   }
 }
